# physical-therapy-application

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/src/: README.md  main.py
backend/src/schemas/: pose_schema.py
backend/src/services/: body_tracking.py
backend/src/utils/: drawing_utils.py  tracking_calculation_utils.py  video_utils.py
backend/tests/: README.md
data/: README.md
frontend/: pubspec.yaml
frontend/assets/: all_exercises.json
frontend/lib/: README.md  main.dart
frontend/lib/models/: exercise.dart  models_lib.dart
frontend/lib/services/: exercise_services.dart
frontend/lib/viewmodels/: app_state_viewmodel.dart  exercise_history_viewmodel.dart  exercise_list_viewmodel.dart  exercise_viewmodel.dart  user_info_viewmodel.dart  viewmodels_lib.dart
frontend/lib/views/: exercise_info_view.dart  exercise_search_view.dart  exercise_tracking_view.dart  exercise_view.dart  favorite_exercise_search_view.dart  home_view.dart  views_lib.dart
frontend/lib/widgets/: exercise_info.dart  exercise_scroll_list.dart  exercise_tracking_preview.dart  menu_tab_bar.dart
models/: README.md
notebooks/: README.md
src/: README.md
src/backend/: main.py
